# MLFlow-Project

./: .dockerignore  .env.example  Dockerfile  README.md  mlflow.db  pyproject.toml
.github/workflows/: actions.yml
loadtest/: README.md  locustfile.py
src/: __init__.py  app.py  logging_setup.py  model.py  predictor.py  preprocessing.py  train.py
src/api/: __init__.py  app.py  predictor.py  schemas.py
tests/: conftest.py  test_api.py  test_predictor.py
