[project]
name = "churn-api"
version = "0.1.0"
description = "Bank customer churn prediction served via Litestar with HyperDX live logs"
requires-python = ">=3.10,<3.13"
dependencies = [
    "litestar[standard]>=2.12,<3.0",
    "joblib>=1.4",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "numpy==2.2.5",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "opentelemetry-instrumentation-asgi>=0.48b0",
    "mlflow==2.22.0",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
addopts = "--cov=src/api --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src/api"]
omit = ["src/api/__init__.py"]
