[project]
name = "churn-api"
version = "0.1.0"
description = "Bank customer churn prediction served via Litestar with Axiom live logs"
requires-python = ">=3.10,<3.13"
dependencies = [
    "litestar[standard]>=2.12,<3.0",
    "joblib>=1.4",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "numpy==2.2.5",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "axiom-py>=0.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]
load = [
    "locust>=2.32",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py"]
